Implemented all recommendations